# Satellite-In-Orbit-OpenGL

./: .gitmodules  CMakeLists.txt  README.md  config.json
resources/model/: earth_clouds.mtl
resources/shader/: l_shader.frag  l_shader.vert  skybox_shader.frag  skybox_shader.vert  t_shader.frag  t_shader.vert
src/: Application.cpp  bergimus.cpp  bergimus.hpp  hello_triangle.cpp  hello_triangle.hpp  lights.cpp  lights.hpp  mathFunk.hpp  objects.cpp  objects.hpp
